--- a/config.json
+++ b/config.json
@@ -1,10 +1,9 @@
 {
-    "token":"YOUR_BOT_TOKEN_HERE",
-    "commandPrefix":"/",
-    "ip":"YOUR_SERVER_IP_HERE",
-    "port":25565,
-    "pingInterval":"30",
-    "embedColor":"7289DA",
+    "token":"DISCORD_TOKEN",
+    "ip":"MC_SERVER_IP",
+    "port":MC_SERVER_PORT,
+    "pingInterval":"PING_INTERVAL",
+    "embedColor":"EMBED_COLOR",
     "serverStatus":{
         "dnd":{
             "msg":"Server offline",
@@ -16,7 +15,7 @@
                 "suffix":""
             },
             "type":"PLAYING",
-            "enabled":0
+            "enabled":DISCORD_IDLE_STATUS_ENABLED
         },
         "online":{
             "msg":{
