--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "discord.js": "^11.5.1",
+    "discordjs/uws": "^10.149.0",
     "markdown-escape": "^1.0.2",
     "mc-ping-updated": "^0.1.0"
   }
